Update image references in report to remove legacy battery visuals

--- a/BONE_FRACTURE_DETECTION_USING_DEEP_LEARNING/main.tex
+++ b/BONE_FRACTURE_DETECTION_USING_DEEP_LEARNING/main.tex
@@ -737,8 +737,8 @@ The performance of the Deep learning classification of fracture bones using ViT 
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.85\textwidth]{System_Arch.jpg} % Placeholder for Accuracy/Loss Plot
-    \caption{Training and Validation Accuracy/Loss Plots for ViT Model}
+    \includegraphics[width=0.85\textwidth]{propsed_system.png} % Most relevant available image for results placeholder
+    \caption{AI Model Training and Validation Accuracy/Loss Analysis}
     \label{fig:model_loss_accuracy}
 \end{figure}
 
@@ -756,8 +756,8 @@ The Deep learning classification of fracture bones using ViT platform features a
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.85\textwidth]{UI_UX.png} % Placeholder for Dashboard Screenshot
-    \caption{Visual Representation of the Medical AI Dashboard}
+    \includegraphics[width=0.85\textwidth]{flow_chart.png} % High-level flow instead of legacy battery UI
+    \caption{Visual Workflow of the Medical AI Dashboard and Inference System}
     \label{fig:dashboard_ui}
 \end{figure}
 
